--- a/index.html
+++ b/index.html
@@ -1,52 +1,66 @@
-<section class="fade-in" id="apply">
-            <h3>Apply for a Course</h3>
-            <div class="section-card" style="margin: 0 auto;">
-                
-                <form action="https://api.web3forms.com/submit" method="POST" style="display: flex; flex-direction: column; gap: 15px; text-align: left;">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="z8X1pvSXDrJjd-Hc2IQC6mmPwmzg0yVGKT1ZHpBO63c" />
+    <meta charset="UTF-8">
+    <title>Home — IT VERSE PATHSHALA | Learn Tech Skills at Affordable Prices</title>
 
-                    <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
+    <link rel="canonical" href="https://itversepatshala.github.io/itversepathshala/index.html">
+    <meta name="description" content="IT Verse Pathshala mein Basic to Advanced Computer Courses, C/C++ Programming, aur Full Stack Development job-ready training affordable fees mein seekhein.">
 
-                    <label style="color: #00e5ff;">Full Name</label>
-                    <input type="text" name="name" required style="padding: 10px; border-radius: 5px; border: none; background: rgba(255,255,255,0.1); color: white;">
+    <meta property="og:title" content="IT VERSE PATHSHALA - Learn Tech Skills">
+    <meta property="og:description" content="Affordable fees mein hands-on Basic to Advanced Computer Courses aur Programming seekhein.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://itversepatshala.github.io/itversepathshala/index.html">
+    <meta property="og:image" content="https://itversepatshala.github.io/itversepathshala/it%20verse.jpeg">
+    <meta property="og:locale" content="en_IN">
+    
+    <link rel="icon" href="it verse.jpeg">
 
-                    <label style="color: #00e5ff;">Email Address</label>
-                    <input type="email" name="email" required style="padding: 10px; border-radius: 5px; border: none; background: rgba(255,255,255,0.1); color: white;">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "EducationalOrganization",
+      "name": "IT VERSE PATHSHALA",
+      "url": "https://itversepatshala.github.io/itversepathshala/",
+      "logo": "https://itversepatshala.github.io/itversepathshala/it%20verse.jpeg",
+      "description": "Providing job-ready training in Computer Courses, Programming, and Full Stack Development.",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "Sales and enrollment",
+        "email": "mailto:itversepatshala@gmail.com"
+      }
+    }
+    </script>
 
-                    <label style="color: #00e5ff;">Select Course</label>
-                    <select name="course" style="padding: 10px; border-radius: 5px; border: none; background: rgba(255,255,255,0.1); color: gray;">
-                        <option value="Basic Computer">Basic to Advanced Computer Course</option>
-                        <option value="Programming C/C++">Programming (C, C++)</option>
-                        <option value="Full Stack">Full Stack Development</option>
-                    </select>
+    <style>
+        body {
+            font-family: 'Poppins', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #0a0f24, #07112e, #0c1538);
+            color: #e4e4e4;
+            animation: fadeIn 1s ease-in-out;
+        }
 
-                    <label style="color: #00e5ff;">Message (Optional)</label>
-                    <textarea name="message" rows="4" style="padding: 10px; border-radius: 5px; border: none; background: rgba(255,255,255,0.1); color: white;"></textarea>
+        header {
+            background: rgba(10, 15, 36, 0.9);
+            backdrop-filter: blur(10px);
+            padding: 15px 30px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
 
-                    <button type="submit" class="btn" style="margin-top: 10px; width: 100%;">Submit Application</button>
+        .brand {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+        }
 
-                </form>
-            </div>
-        </section>
-        ```
-
-**Step 2: Access Key Kaise Milegi? (Bahut Zaroori)**
-
-Bina Access key ke form kaam nahi karega.
-1.  Is website par jao: **[web3forms.com](https://web3forms.com/)**
-2.  Wahan apna Email daalo.
-3.  Tumhe email par ek **Access Key** aayegi (e.g., `a1b2c3d4-....`).
-4.  Upar diye gaye code mein jahan `value="YOUR_ACCESS_KEY_HERE"` likha hai, wahan wo key paste kar dena.
-
-**Step 3: Kahan Paste Karna Hai?**
-
-Apne `index.html` mein jao, sabse neeche scroll karo.
-Jahan `</main>` likha hai, uske **theek upar** ye code paste kar do.
-
-Example:
-```html
-    ... (Why choose us section) ...
-    </section>
-
-    </main>
-<footer>
-...
+        .brand img {
